# agent-relay

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  Cargo.toml  README.md  justfile  relay_cli_first_macos_ui_v_1_dev_plan.md
.github/workflows/: ci.yml
apps/relay-cli/: Cargo.toml
apps/relay-cli/src/: daemon.rs  dispatch.rs  main.rs  render.rs
apps/relay-cli/src/render/: activity.rs  common.rs  mod.rs  profiles.rs  settings.rs  system.rs  usage.rs
apps/relay-cli/tests/: cli.rs
apps/relay-macos/: Package.resolved  Package.swift  README.md  project.yml
apps/relay-macos/AgentRelay.xcodeproj/: project.pbxproj
apps/relay-macos/AppIcon.icon/: icon.json
apps/relay-macos/RelayApp/Activity/: ActivityView.swift
apps/relay-macos/RelayApp/App/: AddAccountResult.swift  AppPreferences.swift  FeatureModels.swift  MenuBarPresenter.swift  ProfilesPaneModel.swift  RelayAppModel.swift  RelayMacOSApp.swift  SettingsPaneModel.swift
apps/relay-macos/RelayApp/MenuBar/: MenuBarActionRow.swift  MenuBarCurrentCardModel.swift  MenuBarCurrentProfileCard.swift  MenuBarHighlightStyle.swift  MenuBarMetricRow.swift  MenuBarMetricRowModel.swift  MenuBarPlanBadge.swift  MenuBarProfilePickerItem.swift  MenuBarUsageCardHeaderView.swift  MenuBarUsageCardSectionView.swift  MenuBarUsageIcon.swift  MenuBarUsageProgressBar.swift  MenuBarUsageStyle.swift  MenuBarView.swift  RelayStatusItemController.swift
apps/relay-macos/RelayApp/Models/: APIModels.swift
apps/relay-macos/RelayApp/Resources/: Info.plist  README.md
apps/relay-macos/RelayApp/Services/: RelayCLIClient.swift  RelayClientError.swift  RelayDaemonClient.swift  RelayNotificationService.swift
apps/relay-macos/RelayApp/Settings/: AgentSettingsCatalog.swift  ProfilesSettingsPaneView.swift  SettingsPaneViews.swift  SettingsView.swift
apps/relay-macos/RelayApp/Views/: AdaptiveRelativeDateText.swift  MultiRingProgressAccessibility.swift  MultiRingProgressView.swift  (+9 more)
apps/relay-macos/RelayAppExecutable/: RelayAppDelegate.swift  RelayMacOSApp.swift  RelayWindowControllers.swift  WindowActionRegistry.swift  main.swift
apps/relay-macos/scripts/: build-app.sh  generate-xcodeproj.sh  package-agrelay.sh  smoke-packaged-app.sh
crates/relay-core/: Cargo.toml
crates/relay-core/src/: app.rs  lib.rs
crates/relay-core/src/adapters/: mod.rs
crates/relay-core/src/adapters/codex/: auth.rs  login.rs  mod.rs  recover.rs  settings.rs  usage.rs
crates/relay-core/src/adapters/codex/usage/: local.rs  mod.rs  remote.rs
crates/relay-core/src/app/: mod.rs  profiles.rs  switching.rs  usage.rs
crates/relay-core/src/internal/: mod.rs  usage_policy.rs
crates/relay-core/src/models/: agent_link.rs  codex_link.rs  diagnostics.rs  doctor.rs  errors.rs  events.rs  mod.rs  overview.rs  probe_identity.rs  profile.rs  protocol.rs  rpc.rs  settings.rs  state.rs  switch.rs  usage.rs
crates/relay-core/src/platform/: detect.rs  mod.rs  paths.rs
crates/relay-core/src/services/: codex_link_service.rs  daemon_service.rs  diagnostics_service.rs  doctor_service.rs  events_service.rs  mod.rs  policy_service.rs  profile_service.rs  query_coordinator.rs  status_service.rs  switch_service.rs  task_manager.rs  usage_service.rs
crates/relay-core/src/store/: log_store.rs  mod.rs  profile_store.rs  state_store.rs  usage_store.rs
crates/relay-core/src/store/entities/: agent_settings.rs  app_settings.rs  failure_events.rs  mod.rs  profile_probe_identities.rs  profiles.rs  switch_history.rs
crates/relay-core/src/store/migrations/: m0001_baseline.rs  mod.rs
crates/relay-core/src/store/profile_store/: codec.rs  events.rs  mod.rs  profiles.rs  schema.rs  settings.rs  tests.rs
docs/: architecture.md  development.md  input-json-schemas.md  install.md  linux-support.md  security-checklist.md  sqlite-migrations.md  sqlite-schema.md  technical_report_2026-03-09.md  todo.md
docs/superpowers/plans/: 2026-03-14-macos-swiftui-refactor.md
docs/superpowers/specs/: 2026-03-14-macos-swiftui-refactor-design.md
scripts/: release-local.sh
(+69 files in other folders)
