[workspace]
members = [
    "apps/relay-cli",
    "crates/relay-core",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
dirs = "6.0"
futures-util = "=0.3.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
# NOTE: Pre-release. Track https://github.com/SeaQL/sea-orm/releases for 2.0.0 stable.
sea-orm = { version = "2.0.0-rc.37", default-features = false, features = ["macros", "runtime-tokio-rustls", "schema-sync", "sqlx-sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
