[package]
name = "relay-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "relay"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
comfy-table.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
relay-core = { path = "../../crates/relay-core" }

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
