[package]
name = "agrelay-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "relay_core"

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
futures-util.workspace = true
reqwest.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
